# NIMM_pip_repos

./: CODEX.md  NIMM_list.md  README.md
00log/: coordinate_projection_transform.md  emos_probability_calibration.md  feels_like_temperature.md  frequency_matching_rain01.md  frequency_matching_rain24.md  fy4b_argi_l1_decoder.md  kalman_element_forecast_correction.md  linear_scd_multi_time_fusion.md  multi_optimize_tp_24h.md  multi_qpf_fm_rain01.md  multi_rain_mait01_blending.md  multi_rain_mait24_blending.md  multi_wind_fft_blending.md  neighbourhood_probability_processing.md  optical_flow_nowcast.md  orographic_nwp_3d_downscaling.md  orographic_precipitation_downscaling.md  (+7 more)
00temp/multi_weather_phenom_grid_12h/: NIMM_list.md  conftest.py  pyproject.toml
00temp/multi_weather_phenom_grid_12h/00log/: README.md
00temp/multi_weather_phenom_grid_12h/00temp/: README.md
00temp/multi_weather_phenom_grid_12h/cli/: __init__.py  __main__.py
00temp/multi_weather_phenom_grid_12h/docs/: README.md  algorithm_guide.md  技术汇报材料.md  算法技术指南.md  算法说明.md
00temp/multi_weather_phenom_grid_12h/env/: config.example.ini  requirements.txt
00temp/multi_weather_phenom_grid_12h/nbs/: plot_analysis.py  run_bench.py  run_test.ipynb  算法说明.ipynb
00temp/multi_weather_phenom_grid_12h/resource/: __init__.py  config.py  data_schema.py  weather_config.py
00temp/multi_weather_phenom_grid_12h/src/: __init__.py  encoder.py  identifier.py  logic_judger.py  main.py  processor.py  selector.py
00temp/multi_weather_phenom_grid_12h/src/utils/: __init__.py  data_loader.py  output.py
00temp/multi_weather_phenom_grid_12h/test/: test_data_loader.py  test_encoder.py  test_identifier.py  test_logic_judger.py  test_selector.py
00temp/optical_flow_nowcast/: __init__.py  pytest.ini  setup.cfg
00temp/optical_flow_nowcast/cli/: __init__.py  __main__.py
00temp/optical_flow_nowcast/docs/: optical_flow_nowcast.md
00temp/optical_flow_nowcast/resource/: README.md
00temp/optical_flow_nowcast/src/: __init__.py  base_plugin.py  dB_trans.py  extrapolation.py  extrapolation_plugin.py  linda.py  linda_plugin.py  lk.py  lk_plugin.py  sprog.py  sprog_plugin.py  steps.py  steps_plugin.py  temp_demo.py  utils.py
00temp/optical_flow_nowcast/test/: test_optical_flow_nowcast.py
00temp/optical_flow_nowcast/utils/: README.md
(+589 files in other folders)
