[metadata]
name = optical-flow-nowcast
version = 1.0.0
description = NIMM optical-flow extrapolation nowcast workflow

[options]
python_requires = >=3.9
packages = find:
install_requires =
    numpy
    scipy
    scikit-image
    pandas
    xarray
    opencv-python
    meteva-base

[flake8]
max-line-length = 120
extend-ignore = E203,E731,W503

